# primitive-sort

./: .gitignore  CHANGELOG.md  README.md  cabal.project  mergesort.cabal  primitive-sort.cabal  stack.yaml
.github/workflows/: build.yaml
bench/: Main.hs
element/Element/: Int8.hs  Word.hs  Word16.hs
indef/: Element.hsig
indef/Sort/Merge/: Indef.hs
src/Data/Primitive/: Sort.hs
src/Sort/: Merge.hs
src/Sort/Merge/: Int8.hs  Word.hs  Word16.hs
test/: Doctest.hs  Main.hs
