name: mergesort
version: 0.1
synopsis: Parallel Mergesort
description: Parallel Mergesort
homepage: https://github.com/andrewthad/mergesort
license: BSD3
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2017 Andrew Martin
category: software
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.25

library
  hs-source-dirs: src
  exposed-modules:
    Data.Primitive.Sort
  build-depends: base, primitive, ghc-prim, contiguous
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
      base
    , mergesort
    , tasty
    , tasty-hunit
    , tasty-smallcheck
    , tasty-quickcheck
    , primitive
    , containers
    , smallcheck
    , QuickCheck
    , HUnit
  ghc-options: -threaded -rtsopts -O2 -with-rtsopts=-N
  default-language: Haskell2010

benchmark bench
  type: exitcode-stdio-1.0
  build-depends:
      base
    , mergesort
    , gauge
    , random
    , primitive
    , ghc-prim
  ghc-options: -threaded -rtsopts -O2 -with-rtsopts=-N
  default-language: Haskell2010
  hs-source-dirs: bench
  main-is: Main.hs

source-repository head
  type: git
  location: https://github.com/andrewthad/mergesort

